style within JS

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </li> 
       -->
     </ul>
-    <button onclick="gerarPizza()">Gerar Pizza</button>
+    <button>Gerar Pizza</button>
     
 
     <!-- Optional JavaScript -->
