make it responsive with bootstrap - row

--- a/index.html
+++ b/index.html
@@ -12,15 +12,25 @@
     <title>Projeto JS</title>
   </head>
   <body>
-    <ul id="container-pizzas">
-      <!-- adicionar pizzas via JS -->
-      <!-- 
-        <li>
-          <img src="https://source.unsplash.com/100x100/?pizza" alt="">
-        </li> 
-      -->
-    </ul>
-    <button>Gerar Pizza</button>
+    <header> 
+      <nav class="navbar navbar-light bg-dark">
+        <span class="navbar-brand mb-0 h1 text-warning">Pizzas y Quesos</span>
+      </nav>
+    </header>
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <ul id="container-pizzas" class="list-inline">
+            </ul>
+            <button class='btn btn-warning text-dark'>Gerar Pizza</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      
+    </footer>
     
 
     <!-- Optional JavaScript -->
