img on navbar plus comments

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <header> 
       <nav class="navbar navbar-light bg-dark">
         <span class="navbar-brand mb-0 h1 text-warning">Pizzas y Quesos</span>
+        <img src="img/pizza.png" alt="Pizza">
       </nav>
     </header>
     <section>
@@ -22,6 +23,7 @@
         <div class="row">
           <div class="col-sm-12">
             <ul id="container-pizzas" class="list-inline">
+              <!-- adicionar pizzas por JS -->
             </ul>
             <button class='btn btn-warning text-dark'>Gerar Pizza</button>
           </div>
