--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <header> 
       <nav class="navbar navbar-light bg-dark">
         <span class="navbar-brand mb-0 h1 text-warning">Pizzas y Quesos</span>
+          <span id="total-pizzas" class="text-warning"></span>
         <img src="img/pizza.png" alt="Pizza">
       </nav>
     </header>
