add badger + container-fluid

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <header> 
       <nav class="navbar navbar-light bg-dark">
         <span class="navbar-brand mb-0 h1 text-warning">Pizzas y Quesos</span>
-          <span id="total-pizzas" class="text-warning"></span>
+          <span id="total-pizzas" class="badge badge-warning"></span>
         <img src="img/pizza.png" alt="Pizza">
       </nav>
     </header>
     <section>
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
           <div class="col-sm-12">
             <ul id="container-pizzas" class="list-inline">
